--- a/index.html
+++ b/index.html
@@ -1,42 +1,230 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Арбитражный помощник</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="telegram.js"></script>
-    <style>
-      body {
-        font-family: sans-serif;
-        text-align: center;
-        padding: 20px;
-        background-color: #f7f7f7;
-      }
-      button {
-        display: block;
-        width: 90%;
-        max-width: 300px;
-        margin: 10px auto;
-        padding: 15px;
-        font-size: 18px;
-        background-color: #2a9fd6;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: #238ac9;
-      }
-    </style>
-  </head>
-  <body>
+<body>
+  <style>
+    body {
+      margin: 0;
+      padding: 24px;
+      font-family: system-ui, sans-serif;
+      background-color: #1e1e1e;
+      color: #eaeaea;
+    }
+
+    h1 {
+      font-size: 22px;
+      font-weight: 600;
+      margin-bottom: 24px;
+      text-align: center;
+    }
+
+    .button {
+      display: block;
+      width: 100%;
+      max-width: 320px;
+      margin: 10px auto;
+      padding: 14px 16px;
+      font-size: 16px;
+      background-color: #2a2a2a;
+      border: 1px solid #444;
+      border-radius: 12px;
+      text-align: center;
+      color: #eaeaea;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .button:hover {
+      background-color: #383838;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    input[type="text"],
+    input[type="datetime-local"] {
+      padding: 10px;
+      font-size: 16px;
+      width: 100%;
+      max-width: 300px;
+      margin: 10px auto;
+      display: block;
+      border: 1px solid #555;
+      border-radius: 8px;
+      background-color: #2a2a2a;
+      color: #eaeaea;
+    }
+
+    .card {
+      background-color: #2a2a2a;
+      border: 1px solid #444;
+      border-radius: 10px;
+      padding: 12px 16px;
+      margin-bottom: 12px;
+    }
+
+    .card-title {
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .card-sub {
+      font-size: 14px;
+      color: #aaa;
+      margin-bottom: 8px;
+    }
+
+    #caseSearch {
+      width: 100%;
+      max-width: 300px;
+      padding: 10px;
+      margin: 0 auto 16px;
+      display: block;
+      font-size: 16px;
+      border-radius: 8px;
+      border: 1px solid #555;
+      background-color: #2a2a2a;
+      color: #eaeaea;
+    }
+  </style>
+
+  <div id="menu">
     <h1>Арбитражный помощник</h1>
-    <button>🔍 Найти практику</button>
-    <button>🧮 Калькулятор пошлины</button>
-    <button>📄 Шаблоны документов</button>
-    <button>📚 Законы</button>
-    <br>
-    <button onclick="Telegram.WebApp.close()">❌ Закрыть</button>
-  </body>
-</html>
+    <div class="button" onclick="showMyCases()">📁 Мои дела</div>
+    <div class="button" onclick="showSearch()">🔍 Найти практику</div>
+    <div class="button" onclick="Telegram.WebApp.close()">❌ Закрыть</div>
+  </div>
+
+  <div id="cases" class="hidden">
+    <h1>Мои дела</h1>
+    <input type="text" id="caseSearch" placeholder="Поиск по названию или номеру" oninput="renderCaseList()" />
+    <div id="caseList"></div>
+    <div class="button" onclick="showCaseForm()">➕ Добавить дело</div>
+    <div class="button" onclick="showMenu()">🔙 Назад в меню</div>
+  </div>
+
+  <div id="caseForm" class="hidden">
+    <h1>Новое дело</h1>
+    <input type="text" id="caseName" placeholder="Название должника" />
+    <input type="text" id="caseNumber" placeholder="Номер дела" />
+    <div class="button" onclick="addCase()">✅ Сохранить</div>
+    <div class="button" onclick="showMyCases()">🔙 Назад</div>
+  </div>
+
+  <div id="hearings" class="hidden">
+    <h1>Заседания</h1>
+    <div id="hearingList"></div>
+    <input type="datetime-local" id="hearingDate" />
+    <input type="text" id="hearingComment" placeholder="Комментарий (опционально)" />
+    <div class="button" onclick="addHearing()">➕ Добавить заседание</div>
+    <div class="button" onclick="showMyCases()">🔙 Назад к делам</div>
+  </div>
+
+  <div id="search" class="hidden">
+    <h1>Поиск по ИНН/ОГРН</h1>
+    <input type="text" id="searchInput" placeholder="Введите ИНН или ОГРН" />
+    <div class="button" onclick="searchKad()">Найти</div>
+    <div class="button" onclick="showMenu()">🔙 Назад</div>
+  </div>
+
+  <script>
+    let currentCaseIndex = null;
+
+    function hideAll() {
+      ["menu", "cases", "caseForm", "hearings", "search"].forEach(id => {
+        document.getElementById(id).classList.add("hidden");
+      });
+    }
+
+    function showMenu() {
+      hideAll();
+      document.getElementById("menu").classList.remove("hidden");
+    }
+
+    function showMyCases() {
+      hideAll();
+      document.getElementById("cases").classList.remove("hidden");
+      renderCaseList();
+    }
+
+    function showCaseForm() {
+      hideAll();
+      document.getElementById("caseForm").classList.remove("hidden");
+    }
+
+    function showSearch() {
+      hideAll();
+      document.getElementById("search").classList.remove("hidden");
+    }
+
+    function showHearings(index) {
+      hideAll();
+      currentCaseIndex = index;
+      document.getElementById("hearings").classList.remove("hidden");
+      renderHearings();
+    }
+
+    function addCase() {
+      const name = document.getElementById("caseName").value.trim();
+      const number = document.getElementById("caseNumber").value.trim();
+      if (!name || !number) return alert("Заполните оба поля");
+      const cases = JSON.parse(localStorage.getItem("myCases") || "[]");
+      cases.push({ name, number, hearings: [] });
+      localStorage.setItem("myCases", JSON.stringify(cases));
+      showMyCases();
+    }
+
+    function renderCaseList() {
+      const search = document.getElementById("caseSearch").value.toLowerCase();
+      const cases = JSON.parse(localStorage.getItem("myCases") || "[]");
+      const container = document.getElementById("caseList");
+      container.innerHTML = "";
+
+      cases.forEach((c, i) => {
+        if (
+          !c.name.toLowerCase().includes(search) &&
+          !c.number.toLowerCase().includes(search)
+        ) return;
+        const div = document.createElement("div");
+        div.className = "card";
+        div.innerHTML = `
+          <div class="card-title">📁 ${c.name}</div>
+          <div class="card-sub">№ ${c.number}</div>
+          <div class="button" onclick="showHearings(${i})">📅 Заседания</div>
+          <div class="button" onclick="alert('Задачи скоро будут')">📌 Задачи</div>
+        `;
+        container.appendChild(div);
+      });
+    }
+
+    function renderHearings() {
+      const cases = JSON.parse(localStorage.getItem("myCases") || "[]");
+      const hearings = cases[currentCaseIndex].hearings || [];
+      const list = document.getElementById("hearingList");
+      list.innerHTML = hearings.length ? "" : "<p style='text-align:center;'>Нет заседаний</p>";
+      hearings.forEach(h => {
+        const p = document.createElement("p");
+        p.textContent = `${new Date(h.date).toLocaleString()} — ${h.comment || "без комментария"}`;
+        list.appendChild(p);
+      });
+    }
+
+    function addHearing() {
+      const date = document.getElementById("hearingDate").value;
+      const comment = document.getElementById("hearingComment").value.trim();
+      if (!date) return alert("Выберите дату заседания");
+      const cases = JSON.parse(localStorage.getItem("myCases") || "[]");
+      cases[currentCaseIndex].hearings.push({ date, comment });
+      localStorage.setItem("myCases", JSON.stringify(cases));
+      document.getElementById("hearingDate").value = "";
+      document.getElementById("hearingComment").value = "";
+      renderHearings();
+    }
+
+    function searchKad() {
+      const val = document.getElementById("searchInput").value.trim();
+      if (!val) return alert("Введите ИНН или ОГРН");
+      window.open(`https://kad.arbitr.ru/Search/quick?Query=${encodeURIComponent(val)}`, "_blank");
+    }
+
+    if (window.Telegram) Telegram.WebApp.ready();
+  </script>
+</body>
