--- a/index.html
+++ b/index.html
@@ -227,4 +227,42 @@
 
     if (window.Telegram) Telegram.WebApp.ready();
   </script>
+  <script>
+  if (window.Telegram) Telegram.WebApp.ready();
+
+  async function sendMiniAppButton() {
+    const token = 'ТВОЙ_ТОКЕН_ОТ_BOTFATHER'; // <-- сюда вставь свой токен
+    const chatId = '7616064852';
+    const apiUrl = `https://api.telegram.org/bot${token}/sendMessage`;
+
+    const payload = {
+      chat_id: chatId,
+      text: 'Открыть помощник',
+      reply_markup: {
+        inline_keyboard: [
+          [
+            {
+              text: '📁 Мои дела',
+              web_app: {
+                url: 'https://damnsd31.github.io/telegram-miniapp/'
+              }
+            }
+          ]
+        ]
+      }
+    };
+
+    try {
+      await fetch(apiUrl, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload)
+      });
+    } catch (e) {
+      console.error('Ошибка отправки WebApp-кнопки:', e);
+    }
+  }
+
+  sendMiniAppButton();
+</script>
 </body>
