--- a/index.html
+++ b/index.html
@@ -1,3 +1,100 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <style>
+    html, body {
+      font-size: 16px;
+      -webkit-text-size-adjust: 100%;
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    body {
+      max-width: 480px;
+      margin: 0 auto;
+      padding: 24px;
+      font-family: system-ui, sans-serif;
+      background-color: #1e1e1e;
+      color: #eaeaea;
+    }
+
+    h1 {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 24px;
+      text-align: center;
+    }
+
+    .button {
+      display: block;
+      width: 100%;
+      max-width: 320px;
+      margin: 10px auto;
+      padding: 14px 16px;
+      font-size: 17px;
+      background-color: #2a2a2a;
+      border: 1px solid #444;
+      border-radius: 12px;
+      text-align: center;
+      color: #eaeaea;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .button:hover {
+      background-color: #383838;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    input[type="text"],
+    input[type="datetime-local"] {
+      padding: 12px;
+      font-size: 17px;
+      width: 100%;
+      max-width: 300px;
+      margin: 10px auto;
+      display: block;
+      border: 1px solid #555;
+      border-radius: 8px;
+      background-color: #2a2a2a;
+      color: #eaeaea;
+    }
+
+    .card {
+      background-color: #2a2a2a;
+      border: 1px solid #444;
+      border-radius: 10px;
+      padding: 12px 16px;
+      margin-bottom: 12px;
+    }
+
+    .card-title {
+      font-weight: 600;
+      margin-bottom: 4px;
+      font-size: 17px;
+    }
+
+    .card-sub {
+      font-size: 15px;
+      color: #aaa;
+      margin-bottom: 8px;
+    }
+
+    #caseSearch {
+      width: 100%;
+      max-width: 300px;
+      padding: 10px;
+      margin: 0 auto 16px;
+      display: block;
+      font-size: 16px;
+      border-radius: 8px;
+      border: 1px solid #555;
+      background-color: #2a2a2a;
+      color: #eaeaea;
+    }
+  </style>
+</head>
 <body>
   <style>
     body {
