--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     }
 
     body {
+      width: 100%;
       max-width: 480px;
       margin: 0 auto;
       padding: 24px;
       font-family: system-ui, sans-serif;
       background-color: #1e1e1e;
       color: #eaeaea;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-sizing: border-box;
     }
 
     h1 {
